twitter card updated.

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ figure {
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:creator" content="@ArashVahdat">
         <meta name="twitter:title" content="Tackling the Generative Learning Trilemma with Denoising Diffusion GANs">
-        <meta name="twitter:description" content="Score-based generative models (SGMs), also known as denoising diffusion models, have recently demonstrated impressive results in terms of both sample quality and distribution coverage. However, they are usually applied directly in data space and often require thousands of network evaluations for sampling. We propose the Latent Score-based Generative Model (LSGM), a novel approach that trains SGMs in a latent space, relying on the variational autoencoder framework. Moving from data to latent space allows us to train more expressive generative models, apply SGMs to non-continuous data, and learn smoother SGMs in a smaller space, resulting in fewer network evaluations and faster sampling.">
-        <meta name="twitter:image" content="https://nvlabs.github.io/LSGM/assets/thumbnail.png">
+        <meta name="twitter:description" content="To reduce the number of sampling steps in diffusion models, we propose to model the denoising distribution with conditional GANs. We show our model tackles the generative learning trilemma & achieves high sample quality, diversity & fast sampling.">
+        <meta name="twitter:image" content="https://nvlabs.github.io/denoising-diffusion-gan/thumbnail.png">
     </head>
 
  <body>
@@ -231,11 +231,7 @@ figure {
             </tr>
             </table>
         </center>
-
-<!--         <div class="affil-row">
-            <div class="col-2 text-center"><sup>1</sup>The University of Chicago</div>
-            <div class="col-2 text-center"><sup>2</sup>NVIDIA</div>
-        </div> -->
+        
         </center>
         <br>
         <center><img width="20%" src="./assets/nvidialogo.png" style="margin-top: 20px; margin-bottom: 3px;"></center>
