added moving teaser

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ figure {
 
     <section id="teaser-image">
             </p><figure style="margin-top: 20px; margin-bottom: 20px;">
-                <img width="100%" src="./assets/teaser.png" style="margin-bottom: 20px;">
+                <img width="100%" src="./assets/teaser.gif" style="margin-bottom: 20px;">
                 <p class="caption">
                     Generative denoising diffusion models typically assume that the denoising distribution can be modeled by a Gaussian distribution. This assumption holds only for small denoising steps, which in practice translates to thousands of denoising steps in the synthesis process. In our denoising diffusion GANs, we represent the denoising model using multimodal and complex conditional GANs, enabling us to efficiently generate data in as few as two steps.
                 </p><p class="caption">
