--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ figure {
         <br>
         <div style="clear: both">
             <div class="paper-btn-parent">
-            <a class="paper-btn" href="./index.html">
+            <a class="paper-btn" href="./assets/paper.pdf">
                 <span class="material-icons"> description </span> 
                  Paper
             </a>
@@ -268,7 +268,7 @@ figure {
             <!--
             <div><span class="material-icons"> event </span> [Dec 2021] <a href="https://twitter.com/ArashVahdat/status/1403362799481364485">Twitter thread</a> explaining the work in detail.</div> -->
             <div><span class="material-icons"> event </span> [Dec 2021] <a href="https://nvlabs.github.io/denoising-diffusion-gan">Project page</a> released!</div>
-            <div><span class="material-icons"> event </span> [Dec 2021] Draft released on <a href="./index.html">arXiv</a>!</div>
+            <div><span class="material-icons"> event </span> [Dec 2021] Draft released <a href="./assets/paper.pdf">here</a>!</div>
         </div>
     </section>
 
@@ -291,7 +291,7 @@ figure {
             </p>
         </div>
         <figure style="width: 100%">
-            <center><img width="40%" src="assets/trilemma.gif"></center>
+            <center><img width="55%" src="assets/trilemma.gif"></center>
         </figure>
         <div class="flex-row">
             <p>
@@ -387,7 +387,7 @@ figure {
                 <p><b>Tackling the Generative Learning Trilemma with Denoising Diffusion GANs</b></p>
                 <p>Zhisheng Xiao*, Karsten Kreis, Arash Vahdat</p>
                 <p><i>* Work done during an internship at NVIDIA.</i></p>
-                <div><span class="material-icons"> description </span><a href="./index.html"> arXiv version</a></div>
+                <div><span class="material-icons"> description </span><a href="./assets/paper.pdf"> arXiv version</a></div>
                 <div><span class="material-icons"> insert_comment </span><a href="assets/xiao2021diffusionGAN.bib"> BibTeX</a></div>
                 <div><span class="material-icons"> integration_instructions </span><a href="https://github.com/NVlabs/denoising-diffusion-gan"> Code</a></div>
             </div>
