added ICLR info.

--- a/index.html
+++ b/index.html
@@ -263,10 +263,9 @@ figure {
         <hr>
         <div class="row">
             <!-- <div><span class="material-icons"> event </span> [Dec 2021] Paper presented at NeurIPS 2021.</div> 
-            <div><span class="material-icons"> event </span> [Feb 2022] Our <a href="https://github.com/NVlabs/denoising-diffusion-gan">code</a> has been released.</div>
-            <div><span class="material-icons"> event </span> [Jan 2022] Our paper is accepted to NeurIPS 2021!</div> -->
-            <!--
-            <div><span class="material-icons"> event </span> [Dec 2021] <a href="https://twitter.com/ArashVahdat/status/1403362799481364485">Twitter thread</a> explaining the work in detail.</div> -->
+            <div><span class="material-icons"> event </span> [Feb 2022] Our <a href="https://github.com/NVlabs/denoising-diffusion-gan">code</a> has been released.</div>-->
+            <div><span class="material-icons"> event </span> [Jan 2022] Our paper is accepted to ICLR 2022 as a spotlight paper!</div> 
+            <div><span class="material-icons"> event </span> [Dec 2021] <a href="https://twitter.com/ArashVahdat/status/1471513155054362625">Twitter thread</a> explaining the work in detail.</div>
             <div><span class="material-icons"> event </span> [Dec 2021] <a href="https://nvlabs.github.io/denoising-diffusion-gan">Project page</a> released!</div>
             <div><span class="material-icons"> event </span> [Dec 2021] Draft released on <a href="https://arxiv.org/abs/2112.07804">arXiv</a>!</div>
         </div>
@@ -397,11 +396,11 @@ figure {
     <section id="bibtex">
         <h2>Citation</h2>
         <hr>
-        <pre><code>@article{xiao2021diffusionGAN,
-  title={Tackling the Generative Learning Trilemma with Denoising Diffusion GANs},
-  author={Xiao, Zhisheng and Kreis, Karsten and Vahdat, Arash},
-  journal={arXiv preprint},
-  year={2021}
+        <pre><code>@inproceedings{xiao2022DDGAN,
+    title={Tackling the Generative Learning Trilemma with Denoising Diffusion {GAN}s},
+    author={Zhisheng Xiao and Karsten Kreis and Arash Vahdat},
+    booktitle={International Conference on Learning Representations (ICLR)},
+    year={2022}
 }</code></pre>
     </section>
 </div>
