added ICLR info.

--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@ figure {
         </center>
         <br>
         <center><img width="20%" src="./assets/nvidialogo.png" style="margin-top: 20px; margin-bottom: 3px;"></center>
+        <div class="affil-row">
+            <div class="venue text-center"><b>ICLR 2022 (spotlight)</b></div>
+        </div>
         <br>
         <div style="clear: both">
             <div class="paper-btn-parent">
