updated bib file

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ figure {
                 <p>Zhisheng Xiao*, Karsten Kreis, Arash Vahdat</p>
                 <p><i>* Work done during an internship at NVIDIA.</i></p>
                 <div><span class="material-icons"> description </span><a href="https://arxiv.org/abs/2112.07804"> arXiv version</a></div>
-                <div><span class="material-icons"> insert_comment </span><a href="assets/xiao2021diffusionGAN.bib"> BibTeX</a></div>
+                <div><span class="material-icons"> insert_comment </span><a href="assets/xiao2022DDGAN.bib"> BibTeX</a></div>
                 <div><span class="material-icons"> integration_instructions </span><a href="https://github.com/NVlabs/denoising-diffusion-gan"> Code</a></div>
             </div>
         </div>
